src/main/webapp/bundles/health_v2/less/benefitsStep.less
// Mixins for icon sizes.
.benefitsIconSize(@icon-font-size, @label-font-size, @margin-offset){
    div.checkbox {
        label{
            width: @icon-font-size * 1.3 + 2; // padding * 2 + font-size + border * 2
            font-size: @label-font-size;
            &:before{
                font-size: @icon-font-size;
            }
        }

        // minimum 2 lines of label text for float to work properly
        min-height: (@icon-font-size * 1.3 + 2) + ceil(@label-font-size * 2.2) + 15; // Icon height + label-font-size's line-height * 2 + margin-bottom
        margin: @icon-font-size * 0.15 + @margin-offset;
    }
}

#benefitsForm{

    .help-icon {
        margin-top:2px;
    }

    .benefits-list {
        margin-left: 15px;

        // custom column width because of the design
        .section{
            position: relative;
            min-height: 1px;
            padding-left: 15px;
            padding-right: 15px;

            &.hasShortlistableChildren {
                padding-bottom:15px;
                h4 {
                    color: #000;
                }
            }

            @media (@sm) {
                float:left;
                &.custom-col-sm{
                    width:37.5%;
                }
                &.custom-col-lg{
                    width:62.5%;
                }
            }
        }

        .hasIcons {
            float: left;
            .categoriesCell {
                float:left;

                .checkbox {
                    padding:0;
                    input{
                        &:checked {
                            & + label:before {
                                background-color: @health-benefits-icon-bg-checked-color;
                                border-color: @health-benefits-icon-border-checked-color;
                                color: #fff;
                            }
                        }
                    }
                    label{
                        display:inline-block;
                        padding: 0;
                        margin: 0;
                        text-align: center;

                        &:before{
                            display:table;
                            float: none;
                            margin:0;
                            margin-bottom: 10px;
                            padding:0.15em;
                            border-radius: 50%;
                            background-color: @health-benefits-icon-bg-color;
                            border-color: @health-benefits-icon-border-color;
                            color: @theme-tertiary;
                        }
                    }
                }

                @media (@xs) {
                    .benefitsIconSize(60px, @font-size-base, 0);
                }
                @media (@sm-only) {
                    .benefitsIconSize(50px, @font-size-small, 1);
                }
                @media (@md-only) {
                    .benefitsIconSize(50px, @font-size-small, -1);
                }
            }

            .CTM-plus label{
                &:hover {
                    &:before{
                        background-color: @health-benefits-icon-bg-checked-color;
                        border-color: @health-benefits-icon-border-checked-color;
                        color: #fff;
                    }

                }
            }
        }

        .subTitle{
            clear: left;
        }

        .noIcons {
            label{
                font-size: 1em;
                &:before{
                    border-color: @benefits-checkbox-border;
                }
            }
            // hack for the css3 multi columns, it is buggy when two columns doesn't have the same amount of children
            .categoriesCell:nth-child(5) {
                display: inline-block;
            }
        }

        .custom-col-lg{
            h2 {
                margin-left:0;
            }
            @media (@md) {
                .noIcons{
                    .content-columns(2, 10);
                }
            }
        }

        @media (@xs-only) {
            .noIcons{
                .content-columns(2, 10);
            }
        }

        .benefits-side-bar {
            @media (@sm) {
                padding-right: 30px;
                padding-left: 0;
            }

            .sidebar-wrapper {
                float:left;
                padding:0 15px;
                background-color: @sidebar-gray-bg-color;
                border-left: 1px solid @sidebar-gray-bg-border-color;

                .top-5-benefits {
                    list-style: none;
                    padding: 0;
                    margin: 20px 0;

                    li{
                        position: relative;
                        display: block;
                        color: @sidebar-gray-text-color;
                        clear: left;
                        padding: 10px 0;

                        &:before{
                            color: @sidebar-gray-icon-color;
                            font-family: 'framework_font';
                            font-size: 50px;
                            display: block;
                            float: left;
                            margin-top: -24px;
                            margin-right: 10px;
                        }
                    }
                }
                
                .footer {
                    text-align: center;
                    margin: 20px 0;
                }

                @media (@sm) {
                    padding-top: 67px;
                }
            }
        }

        .CTM-hospital label, .benefits-side-bar .CTM-hospital{
            &:before { content: "\e921"; }
        }
        .CTM-acupuncture label, .benefits-side-bar .CTM-acupuncture{
            &:before { content: "\e91b"; }
        }
        .CTM-birth label, .benefits-side-bar .CTM-birth{
            &:before { content: "\e91c"; }
        }
        .CTM-chiropractor label, .benefits-side-bar .CTM-chiropractor{
            &:before { content: "\e91d"; }
        }
        .CTM-dental label, .benefits-side-bar .CTM-dental{
            &:before { content: "\e91e"; }
        }
        .CTM-generaldental label, .benefits-side-bar .CTM-generaldental{
            &:before { content: "\e91f"; }
        }
        .CTM-heartsurgery label, .benefits-side-bar .CTM-heartsurgery{
            &:before { content: "\e920"; }
        }
        .CTM-joint label, .benefits-side-bar .CTM-joint{
            &:before { content: "\e922"; }
        }
        .CTM-massage label, .benefits-side-bar .CTM-massage{
            &:before { content: "\e923"; }
        }
        .CTM-naturopathy label, .benefits-side-bar .CTM-naturopathy{
            &:before { content: "\e924"; }
        }
        .CTM-optical label, .benefits-side-bar .CTM-optical{
            &:before { content: "\e925"; }
        }
        .CTM-physiotherapy label, .benefits-side-bar .CTM-physiotherapy{
            &:before { content: "\e926"; }
        }
        .CTM-podiatry label, .benefits-side-bar .CTM-podiatry{
            &:before { content: "\e927"; }
        }
        .CTM-psychology label, .benefits-side-bar .CTM-psychology{
            &:before { content: "\e928"; }
        }
        .CTM-plus label, .benefits-side-bar .CTM-plus{
            &:before { content: "\e929"; }
        }
    }
}

